force-app/main/default/objects/Lead/fields/Assign_Based_on_State__c.field-meta.xml
<CustomField>
    <fullName>Assign_Based_on_State__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Made Default Value checked</description>
    <label>Assign Based on State</label>
    <type>Checkbox</type>
</CustomField>