force-app/main/default/objects/Lead/fields/Badge_Id__c.field-meta.xml
<CustomField>
    <fullName>Badge_Id__c</fullName>
    <label>Badge Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>