force-app/main/default/objects/Lead/fields/Calendly_URL_for_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Calendly_URL_for_Pardot__c</fullName>
    <formula>Owner:User.Calendly_URL__c</formula>
    <label>Calendly URL for Pardot</label>
    <type>Text</type>
</CustomField>