force-app/main/default/objects/Lead/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <label>Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1: Clinics 1-500</fullName>
            </value>
            <value>
                <fullName>Tier 2: Clinics 501-5,000</fullName>
            </value>
            <value>
                <fullName>Tier 3: Clinics 5001-10,000</fullName>
            </value>
            <value>
                <fullName>Tier 4: 10,001+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>