force-app/main/default/objects/Lead/fields/Do_Not_Enroll__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Enroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Enroll</label>
    <type>Checkbox</type>
</CustomField>