force-app/main/default/objects/Lead/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <description>This field is used to capture the Domain part of the standard Email field.</description>
    <label>Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>