force-app/main/default/objects/Lead/fields/Home_Delivery_Provider__c.field-meta.xml
<CustomField>
    <fullName>Home_Delivery_Provider__c</fullName>
    <description>Home Delivery Providers will carry over the Practice Account upon conversion</description>
    <inlineHelpText>Home Delivery Providers will carry over the Practice Account upon conversion</inlineHelpText>
    <label>Home Delivery Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covetrus</fullName>
            </value>
            <value>
                <fullName>In-House Only</fullName>
            </value>
            <value>
                <fullName>Vet Source</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>