force-app/main/default/objects/Lead/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <label>Interaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>