force-app/main/default/objects/Lead/fields/ISR_Call_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ISR_Call_Campaign__c</fullName>
    <label>ISR Call Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISR_Call_Campaign</valueSetName>
    </valueSet>
</CustomField>