force-app/main/default/objects/Lead/fields/Last_Task_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Task_Created_Date__c</fullName>
    <label>Last Task Created Date</label>
    <type>Date</type>
</CustomField>