force-app/main/default/objects/Lead/fields/My_Lead__c.field-meta.xml
<CustomField>
    <fullName>My_Lead__c</fullName>
    <formula>OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Lead</label>
    <type>Checkbox</type>
</CustomField>