force-app/main/default/objects/Lead/fields/Onboarding_Id__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Id__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Onboarding Id</label>
    <type>AutoNumber</type>
</CustomField>