force-app/main/default/objects/Lead/fields/Onboarding_URL__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_URL__c</fullName>
    <description>This field will be used by Pardot to deliver a custom onboarding link to clinics.</description>
    <formula>HYPERLINK(&quot;https://practicehub-signup.chewy.com/welcome/&quot; &amp;  Token__c, &quot;https://practicehub-signup.chewy.com/welcome/&quot; &amp;  Token__c, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding URL</label>
    <type>Text</type>
</CustomField>