force-app/main/default/objects/Lead/fields/Petscriptions_Member__c.field-meta.xml
<CustomField>
    <fullName>Petscriptions_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Petscriptions Member</label>
    <type>Checkbox</type>
</CustomField>