force-app/main/default/objects/Lead/fields/Practice_Role__c.field-meta.xml
<CustomField>
    <fullName>Practice_Role__c</fullName>
    <label>Practice Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>