force-app/main/default/objects/Lead/fields/Practice_Software__c.field-meta.xml
<CustomField>
    <fullName>Practice_Software__c</fullName>
    <label>Practice Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>