force-app/main/default/objects/Lead/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <description>The Primary Email Address for the Practice.  This will carry over to the Account upon conversion.</description>
    <inlineHelpText>The Primary Email Address for the Practice.  This will carry over to the Account upon conversion.</inlineHelpText>
    <label>Primary Email</label>
    <type>Email</type>
</CustomField>