force-app/main/default/objects/Lead/fields/Primary_Fax__c.field-meta.xml
<CustomField>
    <fullName>Primary_Fax__c</fullName>
    <description>The Primary Fax Number for the Practice.  This will carry over to the Account upon conversion.</description>
    <inlineHelpText>The Primary Fax Number for the Practice.  This will carry over to the Account upon conversion.</inlineHelpText>
    <label>Primary Fax</label>
    <type>Phone</type>
</CustomField>