force-app/main/default/objects/Lead/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <description>The Primary Phone for the Practice.  This will carry over to the Account upon conversion.</description>
    <inlineHelpText>The Primary Phone for the Practice.  This will carry over to the Account upon conversion.</inlineHelpText>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>