force-app/main/default/objects/Lead/fields/Record_Owner_for_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner_for_Pardot__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
    <label>Record Owner for Pardot</label>
    <type>Text</type>
</CustomField>