force-app/main/default/objects/Lead/fields/Scan_Date__c.field-meta.xml
<CustomField>
    <fullName>Scan_Date__c</fullName>
    <label>Scan Date</label>
    <type>Date</type>
</CustomField>