force-app/main/default/objects/Lead/fields/Stalled_Other__c.field-meta.xml
<CustomField>
    <fullName>Stalled_Other__c</fullName>
    <label>Stalled Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>