force-app/main/default/objects/Lead/fields/Stalled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Stalled_Reason__c</fullName>
    <label>Stalled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Non-Responsive (&lt; 90 days)</fullName>
            </value>
            <value>
                <fullName>Onboarding Documentation</fullName>
            </value>
            <value>
                <fullName>Timing – Decision Maker</fullName>
            </value>
            <value>
                <fullName>Timing – New Clinic / Staff</fullName>
            </value>
            <value>
                <fullName>Timing – PIMS System</fullName>
            </value>
            <value>
                <fullName>Timing – Seasonality</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pending decision/decision maker</fullName>
                <isActive>false</isActive>
                <label>Pending decision/decision maker</label>
            </value>
            <value>
                <fullName>Timing</fullName>
                <isActive>false</isActive>
                <label>Timing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>