force-app/main/default/objects/Lead/fields/Survey_Responses__c.field-meta.xml
<CustomField>
    <fullName>Survey_Responses__c</fullName>
    <label>Survey Responses</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>