force-app/main/default/objects/Lead/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>HMAC Token generated by automation</description>
    <label>Onboarding Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>