force-app/main/default/objects/Lead/fields/Trade_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_Name__c</fullName>
    <label>Trade Show Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>