force-app/main/default/objects/Lead/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Account</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
                <default>true</default>
                <label>Independent</label>
            </value>
            <value>
                <fullName>Shelter/Non-Profit</fullName>
            </value>
            <value>
                <fullName>Buying Group</fullName>
            </value>
            <value>
                <fullName>Capital Partner/Investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>