force-app/main/default/objects/Lead/fields/Unqualified_Other__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Other__c</fullName>
    <label>Unqualified Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>