force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinic does not want to work with online retailer</fullName>
            </value>
            <value>
                <fullName>Duplicate Lead/Opp</fullName>
            </value>
            <value>
                <fullName>Financial / Margin Concerns</fullName>
            </value>
            <value>
                <fullName>Missing or Invalid Contact Information</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Prefers fax or current approval method</fullName>
            </value>
            <value>
                <fullName>Unwilling to sign contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>