force-app/main/default/objects/Lead/validationRules/Stalledreason_required_for_stage_stalled.validationRule-meta.xml
<ValidationRule>
    <fullName>Stalledreason_required_for_stage_stalled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status,&apos;Stalled&apos;),ISBLANK(TEXT(Stalled_Reason__c)))</errorConditionFormula>
    <errorMessage>Stalled reason is required when the status is &apos;Stalled&apos;.</errorMessage>
</ValidationRule>