force-app/main/default/objects/Lead/listViews/Lead_Source_Landing_Page.listView-meta.xml
<ListView>
    <fullName>Lead_Source_Landing_Page</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Assign_Based_on_State__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Landing Page</value>
    </filters>
    <label>Lead Source = Landing Page</label>
</ListView>