force-app/main/default/objects/Lead/listViews/Website_Leads.listView-meta.xml
<ListView>
    <fullName>Website_Leads</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Territory_ID__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Unqualified_Reason__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Landing Page</value>
    </filters>
    <filters>
        <field>Unqualified_Reason__c</field>
        <operation>notEqual</operation>
        <value>Clinic does not want to work with online retailer,Duplicate Lead/Opp,Financial / Margin Concerns,Missing or Invalid Contact Information,Other,Out of Business,Prefers fax or current approval method,Unwilling to sign contact</value>
    </filters>
    <label>Website Leads</label>
</ListView>