force-app/main/default/objects/Lead/listViews/WVC_2022_Leads.listView-meta.xml
<ListView>
    <fullName>WVC_2022_Leads</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Trade_Show_Name__c</field>
        <operation>equals</operation>
        <value>WVC 2022</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified</value>
    </filters>
    <label>WVC 2022 Leads</label>
</ListView>